# getnovel_scrapy

./: .gitignore  README.rst  getnovel.db  pyproject.toml  setup.py
dbs/: default.db
src/app/: __init__.py  itemloaders.py  items.py  pipelines.py  settings.py
src/app/pipelines/: __init__.py  cleaner.py  cover.py  epub.py
src/app/spiders/: bachngocsach.py
src/app/utils/: debug.py  sqlite.py
src/data/template/OEBPS/: content.opf
src/data/template/OEBPS/ncx/: toc.ncx
