[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "getnovel"
description = "Tool based on Scrapy framework to get novel on websites"
authors = [
  { name="Vũ Thừa Khang", email="vuthuakhangit@gmail.com" },
]
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["crawler", "scrapy"]
license = { text = "MIT" }
dynamic = ["version"]
classifiers = [
    "Framework :: Scrapy",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Scrapy",
    "Operating System :: OS Independent",
]
dependencies = [
    "scrapy >= 2.7.1",
    "pillow >= 9.4.0",
    "tldextract >= 3.4.0",
    "importlib-metadata >= 4.2.0; python_version<'3.8'",
    "importlib-resources >= 5.10.2; python_version<'3.9'",
    "scrapyd >= 1.4.1"
]
[tool.setuptools.dynamic]
version = {attr = "app.__version__"}

[project.optional-dependencies]
dev = [
    "black >= 22.12.0",
    "ipython >= 7.34.0",
    "flake8 >= 5.0.4"
]